Enhanced generic types in interceptor interfaces and implementations